corrected naviation text wrapping issue after resizing

--- a/css/index.css
+++ b/css/index.css
@@ -186,7 +186,7 @@ header nav a {
   text-decoration: none;
   color: #212529;
   font-size: 1.65rem;
-  padding-right: 4%;
+  margin-right: 3.5%;
 }
 .footer {
   width: 100%;
