--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,7 +17,7 @@ header {
             text-decoration: none;
             color: @font-color;
             font-size: 1.65rem;
-            padding-right: 4%;
+            margin-right: 3.5%;
         }
     }
 }
